--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                <div class="main-box">
                   <div class="logo-box">
                      <div class="logo">
-                        <a href="index.html">
+                        <a href="/">
                            <script type="text/javascript" src="js/mirage2.min.js"></script>
                            <img title="Tronis" data-cfsrc="images/logo.png">
                         </a>
@@ -39,28 +39,28 @@
                      <nav class="nav main-menu">
                         <ul class="navigation">
                            <li>
-                              <a href="index.html">Home</a>
+                              <a href="/">Home</a>
                            </li>
                            <li>
-                              <a href="about-us.html">About Us</a>
+                              <a href="about-us">About Us</a>
                            </li>
                            <li>
-                              <a href="our-branches.html">Our branches</a>
+                              <a href="our-branches">Our branches</a>
                            </li>
                            <li>
-                              <a href="services.html">Services and Facilities</a>
+                              <a href="services">Services and Facilities</a>
                            </li>
                            <li>
-                              <a href="testimonials.html">Testimonials </a>
+                              <a href="testimonials">Testimonials </a>
                            </li>
                            <li>
-                              <a href="contact-us.html">Contact Us</a>
+                              <a href="contact-us">Contact Us</a>
                            </li>
                         </ul>
                      </nav>
                   </div>
                   <div class="outer-box">
-                     <a href="contact-us.html" class="header-btn">Book Now</a>
+                     <a href="contact-us" class="header-btn">Book Now</a>
                      <div class="mobile-nav-toggler">
                         <span class="icon lnr-icon-bars"></span>
                      </div>
@@ -71,7 +71,7 @@
                   <nav class="menu-box">
                      <div class="upper-box">
                         <div class="nav-logo">
-                           <a href="index.html">
+                           <a href="/">
                               <img alt="" data-cfsrc="images/logo.png">
                            </a>
                         </div>
@@ -126,7 +126,7 @@
                   <div class="auto-container">
                      <div class="inner-container">
                         <div class="logo">
-                           <a href="index.html">
+                           <a href="/">
                               <img alt="" data-cfsrc="images/logo-dark.png">
                            </a>
                         </div>
@@ -222,7 +222,7 @@
                            <div class="text">After moving to Jaipur, Rakesh Kumar identified the need for quality PG facilities that combined comfort, safety, and affordability. With a commitment to high standards, personalized care, and modern amenities, Galaxy PG has now grown into a network of multiple branches across the city, setting new benchmarks in the PG industry.</div>
                         </div>
                         <div class="btn-box">
-                           <a href="about-us.html" class="theme-btn btn-style-one">
+                           <a href="about-us" class="theme-btn btn-style-one">
                               <span class="btn-title">Read More</span>
                            </a>
                            <div class="contact-info">
@@ -319,7 +319,7 @@
                         </div>
                         <div class="content-box">
                            <h4 class="title">
-                              <a href="services.html">Healthy Meals</a>
+                              <a href="services">Healthy Meals</a>
                            </h4>
                            <div class="text">Breakfast, Lunch, Snacks, Dinner</div>
                            <div class="text">Stay healthy and save money on outside food</div>
@@ -333,7 +333,7 @@
                         </div>
                         <div class="content-box">
                            <h4 class="title">
-                              <a href="services.html">R.O. Drinking Water</a>
+                              <a href="services">R.O. Drinking Water</a>
                            </h4>
                            <div class="text">24/7 clean and safe water</div>
                            <div class="text">No need to buy bottled water</div>
@@ -347,7 +347,7 @@
                         </div>
                         <div class="content-box">
                            <h4 class="title">
-                              <a href="services.html">Laundry Service</a>
+                              <a href="services">Laundry Service</a>
                            </h4>
                            <div class="text">Regular washing and drying</div>
                            <div class="text">Save time and avoid laundry stress</div>
@@ -361,7 +361,7 @@
                         </div>
                         <div class="content-box">
                            <h4 class="title">
-                              <a href="services.html">High-Speed Wi-Fi</a>
+                              <a href="services">High-Speed Wi-Fi</a>
                            </h4>
                            <div class="text">Fast internet in all rooms</div>
                            <div class="text">Perfect for study, work, or entertainment</div>
@@ -375,7 +375,7 @@
                         </div>
                         <div class="content-box">
                            <h4 class="title">
-                              <a href="services.html">24/7 Warden Support</a>
+                              <a href="services">24/7 Warden Support</a>
                            </h4>
                            <div class="text">Always available for help and safety</div>
                            <div class="text">Feel secure and supported day and night</div>
@@ -389,7 +389,7 @@
                         </div>
                         <div class="content-box">
                            <h4 class="title">
-                              <a href="services.html">Doctor on Call</a>
+                              <a href="services">Doctor on Call</a>
                            </h4>
                            <div class="text">Quick medical help when needed</div>
                            <div class="text">Health support just a call away</div>
@@ -403,7 +403,7 @@
                         </div>
                         <div class="content-box">
                            <h4 class="title">
-                              <a href="services.html">Transportation Help</a>
+                              <a href="services">Transportation Help</a>
                            </h4>
                            <div class="text">Pick and drop assistance</div>
                            <div class="text">Easy and safe travel for your needs</div>
@@ -417,7 +417,7 @@
                         </div>
                         <div class="content-box">
                            <h4 class="title">
-                              <a href="services.html">Personal Problem Solving</a>
+                              <a href="services">Personal Problem Solving</a>
                            </h4>
                            <div class="text">Support for any personal or stay issues</div>
                            <div class="text">We listen, care, and solve problems quickly</div>
@@ -431,7 +431,7 @@
                         </div>
                         <div class="content-box">
                            <h4 class="title">
-                              <a href="services.html">Air-Conditioned Rooms</a>
+                              <a href="services">Air-Conditioned Rooms</a>
                            </h4>
                            <div class="text">Cool and comfortable rooms</div>
                            <div class="text">Enjoy a peaceful stay even in hot weather</div>
@@ -445,7 +445,7 @@
                         </div>
                         <div class="content-box">
                            <h4 class="title">
-                              <a href="services.html">CCTV Surveillance</a>
+                              <a href="services">CCTV Surveillance</a>
                            </h4>
                            <div class="text">Security cameras in common areas</div>
                            <div class="text">Feel extra secure with 24/7 monitoring</div>
@@ -459,7 +459,7 @@
                         </div>
                         <div class="content-box">
                            <h4 class="title">
-                              <a href="services.html">Geyser for Winter</a>
+                              <a href="services">Geyser for Winter</a>
                            </h4>
                            <div class="text">Hot water available during winter</div>
                            <div class="text">Comfortable baths even in cold weather</div>
@@ -473,7 +473,7 @@
                         </div>
                         <div class="content-box">
                            <h4 class="title">
-                              <a href="services.html">Study Table & Chair</a>
+                              <a href="services">Study Table & Chair</a>
                            </h4>
                            <div class="text">Each room has a study setup</div>
                            <div class="text">Comfortable place for study or work</div>
@@ -481,7 +481,7 @@
                      </div>
                   </div>
                   <div class="col-lg-12 text-center">
-                     <a href="services.html" class="theme-btn btn-style-one read-more">View More</a>
+                     <a href="services" class="theme-btn btn-style-one read-more">View More</a>
                   </div>
                </div>
             </div>
@@ -660,7 +660,7 @@
                      </div>
                   </div>
                   <div class="col-lg-12 text-center">
-                     <a href="our-branches.html" class="theme-btn btn-style-one read-more">View More Branches</a>
+                     <a href="our-branches" class="theme-btn btn-style-one read-more">View More Branches</a>
                   </div>
                </div>
             </div>
@@ -910,27 +910,27 @@
                            <div class="widget-content">
                               <ul class="user-links">
                                  <li>
-                                    <a href="index.html">
+                                    <a href="/">
                                        <i class="fa-solid fa-crosshairs"></i>Home </a>
                                  </li>
                                  <li>
-                                    <a href="about-us.html">
+                                    <a href="about-us">
                                        <i class="fa-solid fa-crosshairs"></i>About Us </a>
                                  </li>
                                  <li>
-                                    <a href="services.html">
+                                    <a href="services">
                                        <i class="fa-solid fa-crosshairs"></i>Services </a>
                                  </li>
                                  <li>
-                                    <a href="testimonials.html">
+                                    <a href="testimonials">
                                        <i class="fa-solid fa-crosshairs"></i>Testimonials </a>
                                  </li>
                                  <li>
-                                    <a href="our-branches.html">
+                                    <a href="our-branches">
                                        <i class="fa-solid fa-crosshairs"></i>Our Branches </a>
                                  </li>
                                  <li>
-                                    <a href="contact-us.html">
+                                    <a href="contact-us">
                                        <i class="fa-solid fa-crosshairs"></i>Contact Us </a>
                                  </li>
                               </ul>
@@ -990,7 +990,7 @@
                <div class="auto-container">
                   <div class="row pt-4 pb-4" style="background:#333333;">
                      <div class="col-lg-6 text-md-start text-center">
-                        <div class="copyright-text">© Copyrights 2025 <a href="index.html">Galaxy PG</a> All Rights Reserved </div>
+                        <div class="copyright-text">© Copyrights 2025 <a href="/">Galaxy PG</a> All Rights Reserved </div>
                      </div>
                      <div class="col-lg-6 text-md-end text-center">
                         <div class="copyright-text">Design & Development By <a href="http://aspiretechnosys.com/" target="_blank">Aspire Technosys Pvt. Ltd.</a>
