--- a/our-branches.html
+++ b/our-branches.html
@@ -29,7 +29,7 @@
                <div class="main-box">
                   <div class="logo-box">
                      <div class="logo">
-                        <a href="index.html">
+                        <a href="/">
                            <script type="text/javascript" src="js/mirage2.min.js"></script>
                            <img title="Tronis" data-cfsrc="images/logo.png">
                         </a>
@@ -39,28 +39,28 @@
                      <nav class="nav main-menu">
                         <ul class="navigation">
                            <li>
-                              <a href="index.html">Home</a>
+                              <a href="/">Home</a>
                            </li>
                            <li>
-                              <a href="about-us.html">About Us</a>
+                              <a href="about-us">About Us</a>
                            </li>
                            <li>
-                              <a href="our-branches.html">Our branches</a>
+                              <a href="our-branches">Our branches</a>
                            </li>
                            <li>
-                              <a href="services.html">Services and Facilities</a>
+                              <a href="services">Services and Facilities</a>
                            </li>
                            <li>
-                              <a href="testimonials.html">Testimonials </a>
+                              <a href="testimonials">Testimonials </a>
                            </li>
                            <li>
-                              <a href="contact-us.html">Contact Us</a>
+                              <a href="contact-us">Contact Us</a>
                            </li>
                         </ul>
                      </nav>
                   </div>
                   <div class="outer-box">
-                     <a href="contact-us.html" class="header-btn">Book Now</a>
+                     <a href="contact-us" class="header-btn">Book Now</a>
                      <div class="mobile-nav-toggler">
                         <span class="icon lnr-icon-bars"></span>
                      </div>
@@ -71,7 +71,7 @@
                   <nav class="menu-box">
                      <div class="upper-box">
                         <div class="nav-logo">
-                           <a href="index.html">
+                           <a href="/">
                               <img alt="" data-cfsrc="images/logo.png" style="display:none;visibility:hidden;">
                               <noscript>
                                  <img src="images/logo-2.png" alt="">
@@ -129,7 +129,7 @@
                   <div class="auto-container">
                      <div class="inner-container">
                         <div class="logo">
-                           <a href="index.html">
+                           <a href="/">
                               <img alt="" data-cfsrc="images/logo-dark.png" style="display:none;visibility:hidden;">
                               <noscript>
                                  <img src="images/logo.png" alt="">
@@ -157,7 +157,7 @@
                   <h1 class="title">Our Branches</h1>
                   <ul class="page-breadcrumb">
                      <li>
-                        <a href="index.html">Home</a>
+                        <a href="/">Home</a>
                      </li>
                      <li>Branches</li>
                   </ul>
@@ -752,27 +752,27 @@
                            <div class="widget-content">
                               <ul class="user-links">
                                  <li>
-                                    <a href="index.html">
+                                    <a href="/">
                                        <i class="fa-solid fa-crosshairs"></i>Home </a>
                                  </li>
                                  <li>
-                                    <a href="about-us.html">
+                                    <a href="about-us">
                                        <i class="fa-solid fa-crosshairs"></i>About Us </a>
                                  </li>
                                  <li>
-                                    <a href="services.html">
+                                    <a href="services">
                                        <i class="fa-solid fa-crosshairs"></i>Services </a>
                                  </li>
                                  <li>
-                                    <a href="testimonials.html">
+                                    <a href="testimonials">
                                        <i class="fa-solid fa-crosshairs"></i>Testimonials </a>
                                  </li>
                                  <li>
-                                    <a href="our-branches.html">
+                                    <a href="our-branches">
                                        <i class="fa-solid fa-crosshairs"></i>Our Branches </a>
                                  </li>
                                  <li>
-                                    <a href="contact-us.html">
+                                    <a href="contact-us">
                                        <i class="fa-solid fa-crosshairs"></i>Contact Us </a>
                                  </li>
                               </ul>
@@ -832,7 +832,7 @@
                <div class="auto-container">
                   <div class="row pt-4 pb-4" style="background:#333333;">
                      <div class="col-lg-6 text-md-start text-center">
-                        <div class="copyright-text">© Copyrights 2025 <a href="index.html">Galaxy PG</a> All Rights Reserved </div>
+                        <div class="copyright-text">© Copyrights 2025 <a href="/">Galaxy PG</a> All Rights Reserved </div>
                      </div>
                      <div class="col-lg-6 text-md-end text-center">
                         <div class="copyright-text">Design & Development By <a href="http://aspiretechnosys.com/" target="_blank">Aspire Technosys Pvt. Ltd.</a>
