add insta Links

--- a/contact-us.html
+++ b/contact-us.html
@@ -243,7 +243,7 @@
                               </div>
                               <div class="text">
                                  <h6>Visit anytime</h6>
-                                 <span>66 broklyn golden street. New York</span>
+                                 <span>GalaxyPg, Front of Samachar,<br> Jagat  Near, Bhaskar Flyover<br> Vivek Vihar, Bajaj Nagar, Jaipur,<br> Rajasthan 302015</span>
                               </div>
                            </li>
                         </ul>
@@ -267,23 +267,18 @@
                               <div class="text">With over 10 years of dedicated service, we at Galaxy PG have been providing comfortable, secure, and affordable luxury accommodation for students across Jaipur. </div>
                               <ul class="social-icon-two">
                                  <li>
-                                    <a href="#">
+                                    <a href="https://www.facebook.com/profile.php?id=61577065435855" target="_blank">
                                        <i class="fab fa-facebook"></i>
                                     </a>
                                  </li>
                                  <li>
-                                    <a href="#">
-                                       <i class="fa fa-x"></i>
-                                    </a>
-                                 </li>
-                                 <li>
-                                    <a href="#">
+                                    <a href="https://www.linkedin.com/in/galaxypg-jaipur-267537369/" target="_blank">
                                        <i class="fab fa-linkedin-in"></i>
                                     </a>
                                  </li>
                                  <li>
-                                    <a href="#">
-                                       <i class="fab fa-youtube"></i>
+                                    <a href="https://www.instagram.com/galaxypgjaipur/" target="_blank">
+                                       <i class="fab fa-instagram"></i>
                                     </a>
                                  </li>
                               </ul>
