--- a/index.html
+++ b/index.html
@@ -881,23 +881,18 @@
                               <div class="text">With over 10 years of dedicated service, we at Galaxy PG have been providing comfortable, secure, and affordable luxury accommodation for students across Jaipur. </div>
                               <ul class="social-icon-two">
                                  <li>
-                                    <a href="#">
+                                    <a href="https://www.facebook.com/profile.php?id=61577065435855" target="_blank">
                                        <i class="fab fa-facebook"></i>
                                     </a>
                                  </li>
                                  <li>
-                                    <a href="#">
-                                       <i class="fa fa-x"></i>
-                                    </a>
-                                 </li>
-                                 <li>
-                                    <a href="#">
+                                    <a href="https://www.linkedin.com/in/galaxypg-jaipur-267537369/" target="_blank">
                                        <i class="fab fa-linkedin-in"></i>
                                     </a>
                                  </li>
                                  <li>
-                                    <a href="#">
-                                       <i class="fab fa-youtube"></i>
+                                    <a href="https://www.instagram.com/galaxypgjaipur/" target="_blank">
+                                       <i class="fab fa-instagram"></i>
                                     </a>
                                  </li>
                               </ul>
