--- a/index.html
+++ b/index.html
@@ -217,9 +217,9 @@
                      <div class="inner-column">
                         <div class="sec-title">
                            <span class="sub-title">About Us</span>
-                           <h2>Welcome to Galaxy PG Jaipur - Feel the comfort.</h2>
-                           <div class="text">With over 10 years of dedicated service, we at Galaxy PG have been providing comfortable, secure, and affordable luxury accommodation for students across Jaipur. Founded by Mr. Rakesh Kumar, who belongs from Rewari, Haryana, our journey began with a vision to offer more than just a place to stay – a place where people feel at home.</div>
-                           <div class="text">After moving to Jaipur, Rakesh Kumar identified the need for quality PG facilities that combined comfort, safety, and affordability. With a commitment to high standards, personalized care, and modern amenities, Galaxy PG has now grown into a network of multiple branches across the city, setting new benchmarks in the PG industry.</div>
+                           <h2>Welcome to Galaxy PG Jaipur – Feel the comfort.</h2>
+                           <div class="text">With over 10 years of dedicated service, we at Galaxy PG have been providing comfortable, secure, and affordable luxury accommodation for students across Jaipur. Founded by Mr. Rakesh Kumar, our journey began with a vision to offer more than just a place to stay – a place where people feel at home.</div>
+                           <div class="text">Rakesh Kumar identified the need for quality PG facilities that combined comfort, safety, and affordability. With a commitment to high standards, personalized care, and modern amenities, Galaxy PG has now grown into a network of multiple branches across the city, setting new benchmarks in the PG industry.</div>
                         </div>
                         <div class="btn-box">
                            <a href="about-us" class="theme-btn btn-style-one">
