--- a/our-branches.html
+++ b/our-branches.html
@@ -72,10 +72,7 @@
                      <div class="upper-box">
                         <div class="nav-logo">
                            <a href="/">
-                              <img alt="" data-cfsrc="images/logo.png" style="display:none;visibility:hidden;">
-                              <noscript>
-                                 <img src="images/logo-2.png" alt="">
-                              </noscript>
+                              <img alt="" data-cfsrc="images/logo.png">
                            </a>
                         </div>
                         <div class="close-btn">
@@ -130,10 +127,7 @@
                      <div class="inner-container">
                         <div class="logo">
                            <a href="/">
-                              <img alt="" data-cfsrc="images/logo-dark.png" style="display:none;visibility:hidden;">
-                              <noscript>
-                                 <img src="images/logo.png" alt="">
-                              </noscript>
+                              <img alt="" data-cfsrc="images/logo-dark.png">
                            </a>
                         </div>
                         <div class="nav-outer">
