--- a/services.html
+++ b/services.html
@@ -69,7 +69,7 @@
                      <div class="upper-box">
                         <div class="nav-logo">
                            <a href="/">
-                              <img alt="" data-cfsrc="images/logo.png" style="display:none;visibility:hidden;">
+                              <img alt="" data-cfsrc="images/logo.png">
                            </a>
                         </div>
                         <div class="close-btn">
@@ -124,7 +124,7 @@
                      <div class="inner-container">
                         <div class="logo">
                            <a href="/">
-                              <img alt="" data-cfsrc="images/logo-dark.png" style="display:none;visibility:hidden;">
+                              <img alt="" data-cfsrc="images/logo-dark.png">
                            </a>
                         </div>
                         <div class="nav-outer">
@@ -163,7 +163,7 @@
                         <div class="inner-box">
                            <div class="image">
                               <a href="#.">
-                                 <img alt="" data-cfsrc="images/resource/products/1.jpg" style="display:none;visibility:hidden;" />
+                                 <img alt="" data-cfsrc="images/resource/products/1.jpg" />
                               </a>
                            </div>
                            <div class="content">
@@ -185,7 +185,7 @@
                         <div class="inner-box">
                            <div class="image">
                               <a href="#.">
-                                 <img alt="" data-cfsrc="images/resource/products/2.jpg" style="display:none;visibility:hidden;" />
+                                 <img alt="" data-cfsrc="images/resource/products/2.jpg" />
                               </a>
                            </div>
                            <div class="content">
@@ -207,7 +207,7 @@
                         <div class="inner-box">
                            <div class="image">
                               <a href="#.">
-                                 <img alt="" data-cfsrc="images/resource/products/3.jpg" style="display:none;visibility:hidden;" />
+                                 <img alt="" data-cfsrc="images/resource/products/3.jpg" />
                               </a>
                            </div>
                            <div class="content">
@@ -229,7 +229,7 @@
                         <div class="inner-box">
                            <div class="image">
                               <a href="#.">
-                                 <img alt="" data-cfsrc="images/resource/products/4.jpg" style="display:none;visibility:hidden;" />
+                                 <img alt="" data-cfsrc="images/resource/products/4.jpg" />
                               </a>
                            </div>
                            <div class="content">
@@ -251,7 +251,7 @@
                         <div class="inner-box">
                            <div class="image">
                               <a href="#.">
-                                 <img alt="" data-cfsrc="images/resource/products/5.jpg" style="display:none;visibility:hidden;" />
+                                 <img alt="" data-cfsrc="images/resource/products/5.jpg" />
                               </a>
                            </div>
                            <div class="content">
@@ -273,7 +273,7 @@
                         <div class="inner-box">
                            <div class="image">
                               <a href="#.">
-                                 <img alt="" data-cfsrc="images/resource/products/6.jpg" style="display:none;visibility:hidden;" />
+                                 <img alt="" data-cfsrc="images/resource/products/6.jpg" />
                               </a>
                            </div>
                            <div class="content">
@@ -295,7 +295,7 @@
                         <div class="inner-box">
                            <div class="image">
                               <a href="#.">
-                                 <img alt="" data-cfsrc="images/resource/products/7.jpg" style="display:none;visibility:hidden;" />
+                                 <img alt="" data-cfsrc="images/resource/products/7.jpg" />
                               </a>
                            </div>
                            <div class="content">
@@ -317,7 +317,7 @@
                         <div class="inner-box">
                            <div class="image">
                               <a href="#.">
-                                 <img alt="" data-cfsrc="images/resource/products/8.jpg" style="display:none;visibility:hidden;" />
+                                 <img alt="" data-cfsrc="images/resource/products/8.jpg" />
                               </a>
                            </div>
                            <div class="content">
@@ -339,7 +339,7 @@
                         <div class="inner-box">
                            <div class="image">
                               <a href="#.">
-                                 <img alt="" data-cfsrc="images/resource/products/9.jpg" style="display:none;visibility:hidden;" />
+                                 <img alt="" data-cfsrc="images/resource/products/9.jpg" />
                               </a>
                            </div>
                            <div class="content">
@@ -361,7 +361,7 @@
                         <div class="inner-box">
                            <div class="image">
                               <a href="#.">
-                                 <img alt="" data-cfsrc="images/resource/products/10.jpg" style="display:none;visibility:hidden;" />
+                                 <img alt="" data-cfsrc="images/resource/products/10.jpg" />
                               </a>
                            </div>
                            <div class="content">
@@ -383,7 +383,7 @@
                         <div class="inner-box">
                            <div class="image">
                               <a href="#.">
-                                 <img alt="" data-cfsrc="images/resource/products/11.jpg" style="display:none;visibility:hidden;" />
+                                 <img alt="" data-cfsrc="images/resource/products/11.jpg" />
                               </a>
                            </div>
                            <div class="content">
@@ -405,7 +405,7 @@
                         <div class="inner-box">
                            <div class="image">
                               <a href="#.">
-                                 <img alt="" data-cfsrc="images/resource/products/12.jpg" style="display:none;visibility:hidden;" />
+                                 <img alt="" data-cfsrc="images/resource/products/12.jpg" />
                               </a>
                            </div>
                            <div class="content">
