--- a/about-us.html
+++ b/about-us.html
@@ -69,10 +69,7 @@
                      <div class="upper-box">
                         <div class="nav-logo">
                            <a href="/">
-                              <img alt="" data-cfsrc="images/logo.png" style="display:none;visibility:hidden;">
-                              <noscript>
-                                 <img src="images/logo-2.png" alt="">
-                              </noscript>
+                              <img alt="" data-cfsrc="images/logo.png">
                            </a>
                         </div>
                         <div class="close-btn">
@@ -127,10 +124,7 @@
                      <div class="inner-container">
                         <div class="logo">
                            <a href="/">
-                              <img alt="" data-cfsrc="images/logo-dark.png" style="display:none;visibility:hidden;">
-                              <noscript>
-                                 <img src="images/logo.png" alt="">
-                              </noscript>
+                              <img alt="" data-cfsrc="images/logo-dark.png">
                            </a>
                         </div>
                         <div class="nav-outer">
@@ -188,16 +182,10 @@
                   <div class="image-column col-xl-6 col-lg-6">
                      <div class="inner-column wow fadeInLeft">
                         <figure class="image-1 overlay-anim wow fadeInUp">
-                           <img alt="" data-cfsrc="images/resource/about1-1.jpg" style="display:none;visibility:hidden;">
-                           <noscript>
-                              <img src="images/resource/about1-1.jpg" alt="">
-                           </noscript>
+                           <img alt="" data-cfsrc="images/resource/about1-1.jpg">
                         </figure>
                         <figure class="image-2 overlay-anim wow fadeInLeft">
-                           <img alt="" data-cfsrc="images/resource/about1-2.jpg" style="display:none;visibility:hidden;">
-                           <noscript>
-                              <img src="images/resource/about1-2.jpg" alt="">
-                           </noscript>
+                           <img alt="" data-cfsrc="images/resource/about1-2.jpg">
                         </figure>
                      </div>
                   </div>
