--- a/contact-us.html
+++ b/contact-us.html
@@ -20,6 +20,18 @@
    </head>
    <body>
       <div class="page-wrapper">
+         <div class="sidebar-btn">
+            <div class="side-calling-btn">
+                <a href="tel:+917877224455">
+                    <i class="fa fa-phone"></i>
+                </a>
+            </div>
+            <div class="side-whatsapp-btn">
+                <a href="https://wa.me/+917877224455">
+                    <i class="fab fa-whatsapp"></i>
+                </a>
+            </div>
+        </div>         
          <div class="preloader"></div>
          <header class="main-header header-style-one">
             <div class="auto-container">
